# diffeq_practice2020

./: .gitignore  CMakeLists.txt  PlotDraw.py  README.md  funk_28.c  funk_28.h  main_28.c  odu_28.c  odu_28.h
InputData/: data.in
